--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "@tanstack/react-query": "^5.63.0",
     "axios": "^1.7.9",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-toastify": "^11.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
